--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
   "optionalDependencies": {
     "pg": "*",
     "pg.js": "*"
+  },
+  "bugs": "https://github.com/hoegaarden/pg-camelcase/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hoegaarden/pg-camelcase.git"
   }
+
 }
