--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ node_js:
   - "0.11"
   - "0.10"
   - "0.8"
-before_script: npm install pg
-env: TEST_PG_CONNECTION=""
+before_script:
+  - sudo npm install -g npm
+  - npm install pg
+env: TEST_PG_CONNECTION="pg://travis@localhost/postgres"
