--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ node_js:
   - "0.11"
   - "0.10"
   - "0.8"
-before_script:
-  - sudo npm install -g npm
-  - npm install pg
+before_script: npm install pg
+before_install: npm install -g npm
 env: TEST_PG_CONNECTION="pg://travis@localhost/postgres"
